<resources>
    <string name="app_name">NewLoghinApplication</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="attempts">Attempts Left:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">ForgotPassword</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="do_not_have_an_account">Don\'t have an account</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
